--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -10,6 +10,31 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
+clap = { workspace = true }
+everscale-crypto = { workspace = true }
+everscale-types = { workspace = true, features = ["sync", "tycho", "models", "rand", "base64"] }
+futures-util = { workspace = true }
+rand = { workspace = true }
+rayon = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
+tracing = { workspace = true }
+weedb = { workspace = true }
+
+tikv-jemallocator = { workspace = true, features = [
+    "unprefixed_malloc_on_supported_platforms",
+    "background_threads",
+    "profiling",
+] }
+
+tycho-block-util = { workspace = true }
+tycho-core = { workspace = true }
+tycho-network = { workspace = true }
+tycho-storage = { workspace = true }
+tycho-util = { workspace = true, features = ["cli"] }
+tycho-light-node = { workspace = true }
 
 [lints]
 workspace = true
