Impl proof storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,17 @@ resolver = "2"
 members = ["sync-service", "proof-api-l2", "proof-api-ton"]
 
 [workspace.dependencies]
+ahash = "0.8.11"
 anyhow = "1.0"
+arc-swap = "1.7.1"
 clap = { version = "4.5.3", features = ["derive"] }
 everscale-crypto = "0.3"
 everscale-types = { version = "0.1.2", default-features = false }
 futures-util = "0.3.31"
+humantime = "2.2"
 rand = "0.8"
 rayon = "1.10"
+scopeguard = "1.2"
 serde = "1.0"
 serde_json = "1.0.114"
 tokio = { version = "1", default-features = false }
