--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -10,13 +10,17 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+ahash = { workspace = true }
 anyhow = { workspace = true }
+arc-swap = { workspace = true }
 clap = { workspace = true }
 everscale-crypto = { workspace = true }
 everscale-types = { workspace = true, features = ["sync", "tycho", "models", "rand", "base64"] }
 futures-util = { workspace = true }
+humantime = { workspace = true }
 rand = { workspace = true }
 rayon = { workspace = true }
+scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
