--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -11,8 +11,10 @@ license.workspace = true
 
 [dependencies]
 ahash = { workspace = true }
+aide = { workspace = true }
 anyhow = { workspace = true }
 arc-swap = { workspace = true }
+axum = { workspace = true }
 bytesize = { workspace = true, features = ["serde"] }
 clap = { workspace = true }
 everscale-crypto = { workspace = true }
@@ -23,10 +25,14 @@ humantime = { workspace = true }
 rand = { workspace = true }
 rayon = { workspace = true }
 rlimit = { workspace = true }
+schemars = { workspace = true }
 scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+simd-json = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
+tower = { workspace = true }
+tower-http = { workspace = true }
 tracing = { workspace = true }
 weedb = { workspace = true }
 
@@ -42,6 +48,9 @@ tycho-network = { workspace = true }
 tycho-storage = { workspace = true }
 tycho-util = { workspace = true, features = ["cli"] }
 tycho-light-node = { workspace = true }
+
+[build-dependencies]
+anyhow = { workspace = true }
 
 [lints]
 workspace = true
