--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ scopeguard = "1.2"
 serde = "1.0"
 serde_json = "1.0.114"
 simd-json = "0.15.0"
+tl-proto = "0.5.2"
 tokio = { version = "1", default-features = false }
 tower = "0.5"
 tower-http = "0.6"
