--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -30,6 +30,7 @@ scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 simd-json = { workspace = true }
+tl-proto = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
 tower = { workspace = true }
 tower-http = { workspace = true }
