--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ generic-array = "0.14"
 hex = "0.4.3"
 rand = "0.8"
 rayon = "1.10"
+reqwest = { version = "0.12", default-features = false }
 rlimit = "0.10.1"
 schemars = "0.8"
 scopeguard = "1.2"
