--- a/sync-service/Cargo.toml
+++ b/sync-service/Cargo.toml
@@ -10,6 +10,15 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
+base64 = { workspace = true }
+everscale-types = { workspace = true, features = ["tycho", "models", "base64", "serde"] }
+reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true, features = ["raw_value"] }
+tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
