feat: make proof creation generic

--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -50,6 +50,8 @@ tycho-storage = { workspace = true }
 tycho-util = { workspace = true, features = ["cli"] }
 tycho-light-node = { workspace = true }
 
+proof-api-util = { workspace = true }
+
 [build-dependencies]
 anyhow = { workspace = true }
 
