--- a/ton-lite-client/Cargo.toml
+++ b/ton-lite-client/Cargo.toml
@@ -14,7 +14,6 @@ aes = { workspace = true }
 ahash = { workspace = true }
 anyhow = { workspace = true }
 base64 = { workspace = true }
-broxus-util = { workspace = true, features = ["serde"] }
 ctr = { workspace = true }
 dashmap = { workspace = true }
 generic-array = { workspace = true }
@@ -22,15 +21,19 @@ hex = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
 sha2 = { workspace = true }
-tl-proto = { workspace = true }
 thiserror = { workspace = true }
+tl-proto = { workspace = true }
 tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 everscale-crypto = { workspace = true, features = ["tl-proto", "serde"] }
-everscale-types = { workspace = true, features = ["models"] }
+everscale-types = { workspace = true, features = ["models", "serde", "base64"] }
+tycho-util = { workspace = true }
+
+[dev-dependencies]
+proof-api-util = { workspace = true }
 
 [lints]
 workspace = true
