--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 
 [workspace]
 resolver = "2"
-members = ["sync-service", "proof-api-l2", "proof-api-ton", "ton-lite-client"]
+members = ["sync-service", "proof-api-l2", "proof-api-ton", "ton-lite-client", "util"]
 
 [workspace.dependencies]
 aes = "0.8"
@@ -18,7 +18,6 @@ anyhow = "1.0"
 arc-swap = "1.7.1"
 axum = "0.7"
 base64 = "0.22.1"
-broxus-util = { version = "0.2", default-features = false }
 bytesize = "2.0.1"
 clap = { version = "4.5.3", features = ["derive"] }
 ctr = "0.9"
@@ -41,7 +40,7 @@ serde_json = "1.0.114"
 sha2 = "0.10"
 simd-json = "0.15.0"
 thiserror = "1.0"
-tl-proto = "0.5.2"
+tl-proto = "0.5.3"
 tokio = { version = "1", default-features = false }
 tokio-util = { version = "0.7", default-features = false }
 tower = "0.5"
@@ -62,8 +61,10 @@ tycho-network = { git = "https://github.com/broxus/tycho.git", rev = "05717cdb7f
 tycho-storage = { git = "https://github.com/broxus/tycho.git", rev = "05717cdb7fd19bcc33239bdb4aa3ce0257044b02" }
 tycho-util = { git = "https://github.com/broxus/tycho.git", rev = "05717cdb7fd19bcc33239bdb4aa3ce0257044b02" }
 
+proof-api-util = { path = "./util" }
+
 [patch.crates-io]
-everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "cba01d49c969945fdd64d8ce052e73f06aea2e8c" }
+everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "88dd2242c7679b752d695f8c5e8f7352c939a98c" }
 
 [workspace.lints.rust]
 future_incompatible = "warn"
