--- a/ton-lite-client/Cargo.toml
+++ b/ton-lite-client/Cargo.toml
@@ -15,14 +15,15 @@ ahash = { workspace = true }
 anyhow = { workspace = true }
 ctr = { workspace = true }
 dashmap = { workspace = true }
+futures-util = { workspace = true }
 generic-array = { workspace = true }
 rand = { workspace = true }
+scopeguard = { workspace = true }
 serde = { workspace = true }
 sha2 = { workspace = true }
 thiserror = { workspace = true }
 tl-proto = { workspace = true }
 tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
-tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
