--- a/sync-service/Cargo.toml
+++ b/sync-service/Cargo.toml
@@ -13,8 +13,10 @@ license.workspace = true
 anyhow = { workspace = true }
 arc-swap = { workspace = true }
 async-trait = { workspace = true }
+clap = { workspace = true }
 everscale-types = { workspace = true, features = ["tycho", "models", "base64", "serde"] }
 parking_lot = { workspace = true }
+rayon = { workspace = true }
 reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["raw_value"] }
@@ -23,10 +25,21 @@ tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-th
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
+tycho-block-util = { workspace = true }
+tycho-util = { workspace = true, features = ["cli"] }
+
+nekoton-abi = { workspace = true }
+
+tikv-jemallocator = { workspace = true, features = [
+    "unprefixed_malloc_on_supported_platforms",
+    "background_threads",
+] }
+
 proof-api-util = { workspace = true }
 ton-lite-client = { workspace = true }
 
-tycho-block-util = { workspace = true }
+[build-dependencies]
+anyhow = { workspace = true }
 
 [lints]
 workspace = true
