--- a/proof-api-ton/Cargo.toml
+++ b/proof-api-ton/Cargo.toml
@@ -13,7 +13,12 @@ license.workspace = true
 anyhow = { workspace = true }
 axum = { workspace = true }
 clap = { workspace = true }
+everscale-crypto = { workspace = true }
 everscale-types = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 tikv-jemallocator = { workspace = true, features = [
     "unprefixed_malloc_on_supported_platforms",
