--- a/sync-service/Cargo.toml
+++ b/sync-service/Cargo.toml
@@ -16,6 +16,7 @@ async-trait = { workspace = true }
 clap = { workspace = true }
 everscale-types = { workspace = true, features = ["tycho", "models", "base64", "serde"] }
 futures-util = { workspace = true }
+num-traits = { workspace = true }
 parking_lot = { workspace = true }
 reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
