--- a/proof-api-ton/Cargo.toml
+++ b/proof-api-ton/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = { workspace = true }
 axum = { workspace = true }
 clap = { workspace = true }
 everscale-types = { workspace = true, features = ["sync"] }
+governor = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
