--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ bytesize = "2.0.1"
 clap = { version = "4.5.3", features = ["derive"] }
 ctr = "0.9"
 dashmap = "5.5"
+ed25519-dalek = "2.1.1"
 everscale-crypto = "0.3"
 everscale-types = { version = "0.1.2", default-features = false }
 fdlimit = "0.3"
