--- a/sync-service/Cargo.toml
+++ b/sync-service/Cargo.toml
@@ -20,6 +20,7 @@ everscale-types = { workspace = true, features = ["tycho", "abi", "models", "bas
 futures-util = { workspace = true }
 num-traits = { workspace = true }
 parking_lot = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["raw_value"] }
