--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Broxus Team"]
 rust-version = "1.83.0"
@@ -31,6 +31,7 @@ generic-array = "0.14"
 governor = "0.10.0"
 http = "1.3.1"
 humantime = "2.2"
+num-bigint = "0.4.6"
 num-traits = "0.2"
 rand = "0.8"
 rayon = "1.10"
@@ -56,20 +57,20 @@ tikv-jemallocator = { version = "0.6.0", features = [
     "background_threads",
 ] }
 
-tycho-block-util = { git = "https://github.com/broxus/tycho.git", rev = "97ac77d8bafd1d2724b5296f784db5b23941659d" }
-tycho-core = { git = "https://github.com/broxus/tycho.git", rev = "97ac77d8bafd1d2724b5296f784db5b23941659d" }
-tycho-light-node = { git = "https://github.com/broxus/tycho.git", rev = "97ac77d8bafd1d2724b5296f784db5b23941659d" }
-tycho-storage = { git = "https://github.com/broxus/tycho.git", rev = "97ac77d8bafd1d2724b5296f784db5b23941659d" }
-tycho-util = { git = "https://github.com/broxus/tycho.git", rev = "97ac77d8bafd1d2724b5296f784db5b23941659d" }
+tycho-block-util = { git = "https://github.com/broxus/tycho.git", rev = "35a9a15b517c8e1fb291fd5c4a1cb14a5899c834" }
+tycho-core = { git = "https://github.com/broxus/tycho.git", rev = "35a9a15b517c8e1fb291fd5c4a1cb14a5899c834" }
+tycho-light-node = { git = "https://github.com/broxus/tycho.git", rev = "35a9a15b517c8e1fb291fd5c4a1cb14a5899c834" }
+tycho-storage = { git = "https://github.com/broxus/tycho.git", rev = "35a9a15b517c8e1fb291fd5c4a1cb14a5899c834" }
+tycho-util = { git = "https://github.com/broxus/tycho.git", rev = "35a9a15b517c8e1fb291fd5c4a1cb14a5899c834" }
 
-nekoton-abi = { git = "https://github.com/broxus/tycho-nekoton.git", rev = "f783c742ca1b0dcd0cdf7eb1cc67a1c498d10295" }
+tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", rev = "e3c1473a8749cde50cbf5c57166169de09e41000" }
 
 # local deps
 proof-api-util = { path = "./util" }
 ton-lite-client = { path = "./ton-lite-client" }
 
 [patch.crates-io]
-everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "ebc5b4e0f90d1c48a8c8376aa9cf77fc16027353" }
+everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "82c343b2bd17ceb51db0575b6b8ee821ccda037e" }
 
 [workspace.lints.rust]
 future_incompatible = "warn"
