--- a/sync-service/Cargo.toml
+++ b/sync-service/Cargo.toml
@@ -14,8 +14,16 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 clap = { workspace = true }
 ed25519-dalek = { workspace = true }
-everscale-types = { workspace = true, features = ["tycho", "abi", "models", "base64", "serde"] }
+everscale-types = { workspace = true, features = [
+    "tycho",
+    "abi",
+    "models",
+    "base64",
+    "serde",
+    "sync",
+] }
 futures-util = { workspace = true }
+num-bigint = { workspace = true }
 num-traits = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
@@ -26,8 +34,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 tycho-util = { workspace = true, features = ["cli"] }
-
-nekoton-abi = { workspace = true }
+tycho-vm = { workspace = true }
 
 tikv-jemallocator = { workspace = true, features = [
     "unprefixed_malloc_on_supported_platforms",
