--- a/proof-api-l2/Cargo.toml
+++ b/proof-api-l2/Cargo.toml
@@ -17,7 +17,6 @@ arc-swap = { workspace = true }
 axum = { workspace = true }
 bytesize = { workspace = true, features = ["serde"] }
 clap = { workspace = true }
-everscale-types = { workspace = true, features = ["sync", "tycho", "models", "rand", "base64"] }
 fdlimit = { workspace = true }
 futures-util = { workspace = true }
 humantime = { workspace = true }
@@ -32,6 +31,7 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
 tower = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
+tycho-types = { workspace = true, features = ["sync", "tycho", "models", "rand9", "base64"] }
 weedb = { workspace = true }
 
 tikv-jemallocator = { workspace = true, features = [
